more spacing fixes

--- a/web/static_assets/css/style.css
+++ b/web/static_assets/css/style.css
@@ -110,6 +110,10 @@ image-rendering: crisp-edges;
     text-align: center;
     width: 100%;
 }
+.container-task-info{
+    text-align: center;
+    width: 100%;
+}
 
 .user-stats-container{
     font-size: 16px;
